--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "regions": [
         "hnd1"
     ],
@@ -26,7 +27,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "config/wsgi.py"
+            "dest": "/config/wsgi.py"
         }
     ]
 }
