--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,40 @@
 {
     "version": 2,
-    "regions": [
-        "hnd1"
-    ],
+    "regions": ["hnd1"],
     "builds": [
-        {
-            "src": "listmanagement/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
-            }
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
-            "config": {
-              "distDir": "static"
-            }
-        },
-        { "src": "manage.py", "use": "@vercel/python" }
+      {
+        "src": "listmanagement/wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.9"
+        }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "static"
+        }
+      },
+      {
+        "src": "manage.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/listmanagement/wsgi.py"
-        },
-        { "src": "/(.*)", "dest": "manage.py" }
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/listmanagement/wsgi.py"
+      },
+      {
+        "src": "/manage.py",
+        "dest": "/manage.py"
+      }
     ]
-}
+  }
+  
