--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,32 @@
 {
-    "version": 2,
-    "regions": ["hnd1"],
+    "regions": [
+        "hnd1"
+    ],
     "builds": [
-        { "src": "listmanagement/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
-        { "src": "manage.py", "use": "@vercel/python" },
-        { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "static" } }
+        {
+            "src": "listmanagement/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
+            }
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+              "distDir": "static"
+            }
+        }
     ],
     "routes": [
-        { "src": "/static/(.*)", "dest": "/static/$1" },
-        { "src": "/(.*)", "dest": "/listmanagement/wsgi.py" }
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "listmanagement/wsgi.py"
+        }
     ]
 }
