--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==4.2.13
 asgiref==3.8.1
 sqlparse==0.5.0
+build-essential
+default-libmysqlclient-dev
 mysqlclient
-libmariadbclient-dev
 pymysql
 gunicorn
