--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-    "version": 2,
-    "regions": [
-        "hnd1"
-    ],
+    "regions": ["hnd1"],
     "builds": [
         {
-            "src": "listmanagement/wsgi.py",
+            "src": "config/wsgi.py",
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
@@ -16,7 +13,7 @@
             "src": "build_files.sh",
             "use": "@vercel/static-build",
             "config": {
-              "distDir": "static"
+                "distDir": "static"
             }
         }
     ],
@@ -27,7 +24,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "/listmanagement/wsgi.py"
+            "dest": "config/wsgi.py"
         }
     ]
 }
